# seccion-232-dashboard

./: products.py  pyproject.toml  requirements.txt  streamlit_app.py  table.py
data/: nombres_hs8.csv  seccion_232.csv
