[project]
name = "seccion-232-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "great-tables>=0.21.0",
    "ipython>=9.11.0",
    "marimo>=0.20.4",
    "pandas>=2.3.3",
    "polars[all]>=1.39.0",
    "streamlit>=1.55.0",
    "vega-datasets>=0.9.0",
]
